# normalize-mp4

./: README  README.md  flake.nix  main.py  main_test.py  pyproject.toml
src/normalize_mp4/: __init__.py  cli.py  core.py
tests/: conftest.py  test_core.py
